# sentinel-kit

./: .gitignore  .tool-versions  Makefile  README.md  README.md.bak  RPG Method for PRD Creation.txt  SUPPORT.md  UPSTREAM.md  codex.patch  inspector.tgz  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: pull_request_template.md
sentinelkit/: pyproject.toml
sentinelkit/sentinelkit/capsule/: generator.py
sentinelkit/sentinelkit/cli/: __init__.py  agents.py  capsule.py  context.py  context_lint.py  contract_validate.py  contracts.py  decision_log.py  decisions.py  executor.py  main.py  prompts.py  runbook.py  selfcheck.py  sentinels.py  state.py
sentinelkit/sentinelkit/cli/mcp/: __init__.py  server.py  smoke.py
sentinelkit/sentinelkit/context/: allowed_context.py  limits.py  lint.py
sentinelkit/sentinelkit/contracts/: __init__.py  loader.py
sentinelkit/sentinelkit/prompt/: __init__.py  agents.py  render.py
sentinelkit/sentinelkit/prompt/templates/: agent.md.j2
sentinelkit/sentinelkit/scripts/: md_surgeon.py  snippets.py
sentinelkit/sentinelkit/tests/: __init__.py  _selfcheck_helpers.py
sentinelkit/sentinelkit/utils/: errors.py  paths.py
sentinelkit/tests/: conftest.py  test_cli_decisions_runbook.py  test_cli_mcp.py  test_cli_selfcheck.py  test_decision_log.py  test_mcp_codex_wrapper.py  test_mcp_server.py  test_mcp_stdio_server.py  test_smoke.py
sentinelkit/tests/fixtures/: DECISIONS.sample.md
src/sentinel_assets/: Makefile  pyproject.toml
src/sentinel_assets/.github/workflows/: sentinel-ci.yml
src/sentinel_assets/.sentinel/agents/: all_agents.json
src/sentinel_assets/.sentinel/agents/backender/: PLAYBOOK.md  ROLE.md
src/sentinel_assets/.sentinel/agents/builder/: ROLE.md  agent.json
src/sentinel_assets/.sentinel/agents/capsuleauthor/: PLAYBOOK.md  ROLE.md  agent.json
src/sentinel_assets/.sentinel/agents/commander/: PLAYBOOK.md  ROLE.md  agent.json
src/sentinel_assets/.sentinel/agents/designer/: ROLE.md  agent.json
src/sentinel_assets/.sentinel/agents/frontender/: ROLE.md  agent.json
src/sentinel_assets/.sentinel/agents/integrator/: PLAYBOOK.md  ROLE.md
src/sentinel_assets/.sentinel/contracts/: README.md  users.v1.yaml
src/sentinel_assets/.sentinel/docs/: sentinel_asset_mapping.md
src/sentinel_assets/.sentinel/prompts/: sentinel.router.md
src/sentinel_assets/.sentinel/router_log/: 2025-11-09T134339-005-capsule-gen.jsonl  2025-11-11T050759-005-capsule-gen.jsonl  README.md
src/sentinel_assets/.sentinel/snippets/: upstream-decision.md  workflow-badge.md
src/sentinel_assets/.sentinel/tests/: capsule-create.test.ts  decision-log.test.ts
src/sentinel_assets/scripts/: bootstrap.py
src/sentinel_assets/sentinel_project/: __init__.py
src/sentinel_assets/sentinelkit/: pyproject.toml
src/sentinel_assets/sentinelkit/sentinelkit/: __init__.py
src/sentinel_assets/sentinelkit/tests/: __init__.py  test_cli_mcp.py  test_mcp_server.py  test_runbook_updater.py
(+248 files in other folders)
