[project]
name = "specify-cli"
version = "0.0.20"
description = "Specify CLI, part of GitHub Spec Kit. A tool to bootstrap your projects for Spec-Driven Development (SDD)."
requires-python = ">=3.12"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    "sentinelkit",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "httpx",
    "hatchling",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/sentinel_assets" = "sentinel_assets"

[tool.hatch.build.targets.sdist.force-include]
"src/sentinel_assets" = "sentinel_assets"

[tool.uv.sources]
sentinelkit = { workspace = true }

[tool.uv.workspace]
members = ["sentinelkit"]
