[project]
name = "sentinelkit"
version = "0.0.0a0"
description = "Python enforcement toolkit for Spec Kit sentinels."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
sentinel = "sentinelkit.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinelkit"]
