[project]
name = "sentinelkit"
version = "0.0.0a0"
description = "Python enforcement toolkit for Spec Kit sentinels."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pyyaml",
    "jsonschema>=4.23",
    "jinja2>=3.1",
    "portalocker>=2.10",
]

[project.scripts]
sentinel = "sentinelkit.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "sentinelkit/prompt/templates/*.md.j2",
]

[tool.hatch.build.targets.wheel]
packages = ["sentinelkit"]
